# soop

./: .gitignore  .gitremotes  CMakeLists.txt  README.md
demo/: main.cpp  test_main_1.cpp  test_main_2.cpp
demo/sample_data/: assigned_teachers.txt  grades.txt  students.txt  subjects.txt  teachers.txt
demo/src/: definitions.hpp  main.cpp  onto.cpp  onto.hpp  reader.cpp  reader.hpp  stats.cpp  stats.hpp
demo2/: cs_sample  sample_data
demo2/src/: data.cpp  data.hpp  main.cpp  onto.cpp  onto.hpp
demo3/src/: main.cpp
include/soop/: buildin_predicates.hpp  entity.hpp  entity_utils.hpp  free_vars.hpp  onto.hpp  predicates.hpp  primitives.hpp  problem.hpp  relation.hpp  spass.hpp  type_checking.hpp  util.hpp  z3.hpp
lib/: buildin_predicates.cpp  entity.cpp  onto.cpp  predicate.cpp  problem.cpp  spass.cpp  z3.cpp
src/: free_vars.hpp  primitives.hpp  problem.cpp  problem.hpp  relation.hpp  spass.cpp  spass.hpp  test_main_1.cpp  test_main_2.cpp
test/: basic.cpp  point.cpp  rewrite.cpp
